crates/libs/frieze/tests/ui/unsupported_field_type_u128.rs
use frieze::Schema;

#[derive(Schema)]
struct S {
    x: u128,
}

fn main() {}
